[package]
name = "duat"
version = "0.8.3"
edition = "2024"
authors = ["AhoyISki"]
description = "A modern, very customizable text editor, configured in rust."
repository = "https://github.com/AhoyISki/duat"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
include = ["src/", "templates/*"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unit_arg = "allow"

[dependencies]
duat-core = "0.8.0"
dirs-next = "2.0.0"
log = "0.4.29"

# List of UIs.
duat-term = { version = "0.8.1", optional = true }

# Default plugins
duat-base = "0.8.1"
duat-filetype = "0.4.0"
duatmode =  "0.8.1"
duat-treesitter = { version = "0.4.0", optional = true }
duat-match-pairs = { version = "0.3.0", optional = true }

# App dependencies
clap = { version = "4.5.53", features = ["derive"], optional = true }
convert_case = { version = "0.10.0", optional = true }
libloading = { version = "0.9.0", optional = true }
notify = { version = "8.2.0", optional = true }
dissimilar = "1.0.10"
interrupt-read = "0.5.0"

[target.'cfg(not(target_os = "android"))'.dependencies.arboard]
version = "3.6.1"
default-features = false
features = ["wayland-data-control"]
optional = true

[target.'cfg(target_os = "android")'.dependencies.android_clipboard]
version = "0.1.0"
optional = true

[features]
default = ["term-ui", "treesitter", "app"]
term-ui = ["dep:duat-term"]
deadlocks = ["duat-core/deadlocks"]
git-deps = []
treesitter = ["dep:duat-treesitter", "dep:duat-match-pairs"]
app = ["dep:clap", "dep:convert_case", "dep:libloading", "dep:notify", "dep:arboard", "dep:android_clipboard"]

[[bin]]
name = "duat"
path = "src/main.rs"

[lib]
name = "duat"
path = "src/lib.rs"

[profile.lto-optimized]
codegen-units = 1
lto = true
inherits = "release"
