[package]
name = "duat"
version = "0.8.3"
edition = "2024"
authors = ["AhoyISki"]
description = "A modern, very customizable text editor, configured in rust."
repository = "https://github.com/AhoyISki/duat"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
include = ["src/", "templates/*"]

[workspace]
resolver = "3"
members = ["crates/*"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unit_arg = "allow"

[dependencies]
duat-core = { version = "0.8.0", path = "crates/duat-core" }
dirs-next = "2.0.0"
log = "0.4.29"
dissimilar = "1.0.10"
interrupt-read = "0.6.0"

# Possible Ui implementations (only terminal for now).
duat-term = { version = "0.8.1", path = "crates/duat-term", optional = true }

# Default plugins
duat-base = { version = "0.8.1", path = "crates/duat-base" }
duat-filetype = { version = "0.4.0", path = "crates/duat-filetype" }
duatmode = { version = "0.8.1", path = "crates/duatmode" }
duat-treesitter = { version = "0.4.0", path = "crates/duat-treesitter", optional = true }
duat-match-pairs = { version = "0.3.0", path = "crates/duat-match-pairs", optional = true }

# App dependencies
clap = { version = "4.5.53", features = ["derive"], optional = true }
convert_case = { version = "0.10.0", optional = true }
libloading = { version = "0.9.0", optional = true }
notify = { version = "8.2.0", optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies.arboard]
version = "3.6.1"
default-features = false
features = ["wayland-data-control"]
optional = true

[target.'cfg(target_os = "android")'.dependencies.android_clipboard]
version = "0.1.0"
optional = true

[features]
default = ["term-ui", "treesitter", "app"]
term-ui = ["dep:duat-term"]
treesitter = ["dep:duat-treesitter", "dep:duat-match-pairs"]
app = ["dep:clap", "dep:convert_case", "dep:libloading", "dep:notify", "dep:arboard", "dep:android_clipboard"]

[[bin]]
name = "duat"
path = "src/main.rs"

[lib]
name = "duat"
path = "src/lib.rs"

[profile.lto-optimized]
codegen-units = 1
lto = true
inherits = "release"
