[package]
# Don't change the package's name. Duat depends on it.
name = "config"
version = "1.0.0"
edition = "2024"
# Please don't post your configuration crate to crates.io.
# If you want to keep it somewhere, try a repository website,
# like github or gitlab
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
# You can get rid of this one, if you don't want the duat-kak editor.

[dependencies.kak]
path = "../duat-kak/"
version = ">=0.3.0"
package = "duat-kak"

[dependencies.duat]
path = "../"
version = ">=0.3.0"

[dependencies.catppuccin]
path = "../../duat-catppuccin/"
version = ">=0.1.0"
package = "duat-catppuccin"
