[package]
# Don't change the package's name.
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duat = { version = ">=0.1.0", path = "/home/mateus/Development/duat/" }
duat-kak = ">=0.1.0"
