[package]
name = "duat-base"
version = "0.7.2"
edition = "2024"
authors = ["AhoyISki"]
description = "Basic components common in Duat, included by default on duat"
repository = "https://github.com/AhoyISki/duat/tree/master/duat-base"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[lints.rust]
missing_docs = "warn"

[dependencies]
format-like = "0.4.0"
duat-core = "0.7.2"
regex-syntax = "0.8.8"
