[package]
name = "duat-core"
version = "0.6.0"
edition = "2024"
authors = ["AhoyISki"]
description = "The core of Duat, a highly customizable text editor."
repository = "https://github.com/AhoyISki/duat/tree/master/duat-core"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[lints.rust]
private_bounds = "allow"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
while_let_on_iterator = "allow"

[dependencies]
gapbuf = "0.1.4"
dirs-next = "2.0.0"
bincode = "2.0.1"
lender = { version = "0.3.2", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
format-like = "0.3.0"
log = "0.4.27"
parking_lot = "0.12.4"
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }
regex-syntax = "0.8.5"

[target.'cfg(target_os = "android")'.dependencies.clipboard]
version = "0.1.0"
package = "android_clipboard"

[target.'cfg(not(target_os = "android"))'.dependencies.clipboard]
version = "3.6.0"
default-features = false
package = "arboard"

[features]
# NOTE: Features meant for testing only by myself.
default = []
wack = []
deadlocks = []
