[package]
name = "duat-core"
version = "0.7.3"
edition = "2024"
authors = ["AhoyISki"]
description = "The core of Duat, a highly customizable text editor."
repository = "https://github.com/AhoyISki/duat/tree/master/duat-core"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[lints.rust]
private_bounds = "allow"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
while_let_on_iterator = "allow"
unit_arg = "allow"

[dependencies]
gapbuf = "0.1.4"
dirs-next = "2.0.0"
bincode = "2.0.1"
lender = { version = "0.4.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
format-like = "0.4.0"
log = "0.4.28"
parking_lot = "0.12.5"
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }
regex-syntax = "0.8.8"
thread-count = "0.3.1"

[target.'cfg(target_os = "android")'.dependencies.android_clipboard]
version = "0.1.0"

[target.'cfg(not(target_os = "android"))'.dependencies.arboard]
version = "3.6.1"
default-features = false
features = ["wayland-data-control"]

[features]
# NOTE: Features meant for testing only by myself.
default = []
wack = []
deadlocks = []
