[package]
name = "duat-kak"
version = "0.1.3"
authors = ["AhoyISki"]
description = "A Kakoune inspired editing mode for Parsec"
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-kak"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "editing-mode", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
duat-core = { path = "../duat-core/", version = ">=0.1.0" }
