[package]
name = "duat-kak"
version = "0.3.0"
authors = ["AhoyISki"]
description = "A Kakoune inspired editing mode for Parsec"
repository = "https://github.com/AhoyISki/duat/tree/master/duat-kak"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "editing-mode", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat-core = { path = "../duat-core/", version = ">=0.3.0" }
