[package]
name = "duat-term"
version = "0.5.0"
authors = ["AhoyISki"]
description = "A frontend for Duat for the terminal"
repository = "https://github.com/AhoyISki/duat/tree/master/duat-term"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "terminal", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat-core = { path = "../duat-core/", version = "0.5.0" }

unicode-width = "0.1.14"
crossterm = "0.29.0"
smallvec = "1.15.0"
cassowary = "0.3.0"
micromap = "0.0.19"
