[package]
name = "duat-term"
version = "0.6.1"
edition = "2024"
authors = ["AhoyISki"]
description = "A frontend for Duat for the terminal"
repository = "https://github.com/AhoyISki/duat/tree/master/duat-term"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "terminal", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[dependencies]
duat-core = { path = "../duat-core/", version = "0.7.0" }

unicode-width = "0.2.1"
smallvec = "1.15.1"
cassowary = "0.3.0"
micromap = "0.1.0"
crossterm = "0.29.0"
