[package]
name = "duat-utils"
version = "0.6.0"
edition = "2024"
authors = ["AhoyISki"]
description = "Basic components common in Duat, such as widgets and modes"
repository = "https://github.com/AhoyISki/duat/tree/master/duat-utils"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[lints.rust]
missing_docs = "warn"

[dependencies]
format-like = "0.3.0"
duat-core = { version = "0.6.0", path = "../duat-core/" }
regex-syntax = "0.8.5"
