[package]
name = "parsec-core"
version = "0.1.4"
authors = ["AhoyISki"]
description = "A Highly customizable text editor, configured through a rust crate."
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-core"
license = "AGPL-3.0-or-later"
readme = "../README.md"
keywords = ["editor", "text", "application", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
# Style handling
crossterm = ">=0.26.0"

# Utility
ropey = ">=1.6.0"
any-rope = { path = "../../any-rope/", version = ">=1.1.0" }
dyn-clone = "1.0.13"

[dev-dependencies]
no_deadlocks = { path = "../../no-deadlocks/" }

[features]
# NOTE: Features meant for testing only by myself.
disable-testing = []
deadlock-detection = []
wacky-colors = []
