[package]
name = "parsec-core"
version = "0.1.4"
authors = ["AhoyISki"]
description = "A Highly customizable text editor, configured through a rust crate."
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-core"
license = "AGPL-3.0-or-later"
readme = "../README.md"
keywords = ["editor", "text", "application", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
# Style handling
crossterm = ">=0.26.0"

# Utility
ropey = ">=1.6.0"
any-rope = ">=1.2.2"
dyn-clone = "1.0.13"

# For testing only
no_deadlocks = { path = "../../no-deadlocks/" }

[features]
# NOTE: Features meant for testing only by myself.
default = ["wacky-colors"]
disable-testing = []
deadlock-detection = []
wacky-colors = []
