[package]
name = "parsec-core"
version = "0.1.4"
authors = ["AhoyISki"]
description = "The core of Parsec, a highly customizable text editor."
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-core"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
# Style handling
crossterm = ">=0.26.0"

# Utility
ropey = ">=1.6.0"
any-rope = ">=1.2.2"

[features]
# NOTE: Features meant for testing only by myself.
default = []
disable-testing = []
wacky-colors = []
