[package]
name = "parsec-kak"
version = "0.1.2"
authors = ["AhoyISki"]
description = "A Kakoune inspired editing mode for Parsec"
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-kak"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "editing-mode", "text", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
parsec-core = { path = "../parsec-core/", version = "^0.1.0" }

crossterm = "^0.26.0"
