[package]
name = "parsec-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "*"

crossterm = "*"
parsec-core = { version = "*", path = "../parsec-core/" }

[features]
# temporary feature
wrapped = []
