[package]
name = "parsec-term"
version = "0.1.0"
authors = ["AhoyISki"]
description = "A frontend for Parsec for the terminal"
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-term"
license = "AGPL-3.0-or-later"
keywords = ["editor", "terminal", "text", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
unicode-width = "0.1.10"

crossterm = "0.26.0"
parsec-core = "0.1.0"
