[package]
name = "parsec-term"
version = "0.1.1"
authors = ["AhoyISki"]
description = "A frontend for Parsec for the terminal"
repository = "https://github.com/AhoyISki/parsec/tree/master/parsec-term"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "terminal", "text", "parsec"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2021"

[dependencies]
parsec-core = { path = "../parsec-core/", version = "0.1.0" }

unicode-width = "0.1.10"
crossterm = "0.26.0"
smallvec = "1.10.0"
cassowary = "0.3.0"
