[package]
name = "duat-core"
version = "0.9.0"
edition = "2024"
authors = ["AhoyISki"]
description = "The core of Duat, a highly customizable text editor."
repository = "https://github.com/AhoyISki/duat/tree/master/duat-core"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "application", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]

[lints.rust]
private_bounds = "allow"
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
while_let_on_iterator = "allow"
unit_arg = "allow"

[dependencies]
dirs-next = "2.0.0"
bincode = "=2.0.1"
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
format-like = "0.7.0"
log = "0.4.0"
regex-syntax = "0.8.8"
shellexpand = "3.1.2"
gap-buf = { version = "0.6.1", features = ["bincode"] }
interrupt-read = "0.6.0"
interprocess = "2.4.0"
notify = "8.2.0"

[dependencies.regex-cursor]
version = "0.1.5"
default-features = false
features = ["perf-inline"]
