[package]
name = "duat-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
duat-core = { version = "0.8.0", path = "../duat-core" }
duat-filetype = { version = "0.4.0", path = "../duat-filetype" }
globset = { version = "0.4.18", default-features = false }
jsonrpc-lite = "0.6.1"
lsp-types = { version = "0.97.0", features = ["proposed"] }
serde = "1.0.228"
serde_json = "1.0.149"
toml = { version = "1.0.1", default-features = false, features = ["serde"] }
