[package]
name = "duat-lsp"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
duat-core = { version = "0.9.0", path = "../duat-core" }
duat-filetype = { version = "0.4.0", path = "../duat-filetype" }
gap-buf = "0.5.0"
globset = { version = "0.4.18", default-features = false }
jsonrpc-lite = "0.7.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }
serde = "1.0.228"
serde_json = "1.0.149"
toml = { version = "1.0.1", default-features = false, features = ["serde"] }
