[package]
name = "duat-lsp"
version = "0.10.0"
authors = ["AhoyISki"]
description = "A duat plugin for LSP usage within Duat."
repository = "https://github.com/AhoyISki/duat"
license = "GPL-3.0-or-later"
keywords = ["editor", "text", "plugin", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"
publish = false

[dependencies]
duat-core.workspace = true
duat-filetype.workspace = true

gap-buf = "0.6.1"
globset = { version = "0.4.18", default-features = false }
jsonrpc-lite = "0.7.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }
serde = "1.0.228"
serde_json = "1.0.149"
toml = { version = "1.0.1", default-features = false, features = ["serde"] }
