[package]
name = "duat-match-pairs"
version = "0.10.0"
authors = ["AhoyISki"]
description = "A duat plugin to highlight matched pairs"
repository = "https://github.com/AhoyISki/duat"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "plugin", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat-core.workspace = true
duat-filetype.workspace = true
duat-treesitter.workspace = true
