[package]
name = "duatmode"
version = "0.8.1"
authors = ["AhoyISki"]
description = "The default mode for the Duat text editor"
repository = "https://github.com/AhoyISki/duat/tree/master/duatmode"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "editing-mode", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat-core = { version = "0.8.0", path = "../duat-core" }
duat-base = { version = "0.8.0", path = "../duat-base" }
duat-jump-list = { version = "0.3.0", path = "../duat-jump-list" }
duat-treesitter = { version = "0.4.0", path = "../duat-treesitter" }
duat-filetype = { version = "0.4.0", path = "../duat-filetype" }
