[package]
name = "duatmode"
version = "0.9.0"
authors = ["AhoyISki"]
description = "The default mode for the Duat text editor"
repository = "https://github.com/AhoyISki/duat/tree/master/duatmode"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "editing-mode", "text", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat-core.workspace = true
duat-base.workspace = true
duat-jump-list.workspace = true
duat-treesitter.workspace = true
duat-filetype.workspace = true
